# RIT_client_server

./: CMakeLists.txt  Makefile  README.md  README_RUS.md  doxygen.conf
src/: CMakeLists.txt  client.cpp  server.cpp
src/client/: client.cpp  client.h  client_app.cpp  client_app.h  console_client.cpp
src/server/: client_handler.cpp  client_handler.h  command.h  parser.cpp  parser.h  server.cpp  server.h  server_app.cpp
src/tests/: CMakeLists.txt  client_app_test.cpp  client_test.cpp  parser_test.cpp  test_integration.py
src/tools/: CMakeLists.txt  command.h  communicator.cpp  communicator.h  parser.cpp  parser.h
src/tools/communications/: CMakeLists.txt  client_connection.cpp  client_connection.h  connection.cpp  connection.h  server_connection.cpp  server_connection.h
src/tools/parser/: parser.cpp  parser.h
